# Spearfish

./: CMakeList.txt  CMakeLists.txt  LICENSE.old  README.md
src/cpp/: main.cpp
src/cpp/io/: SpearfishArgumentParser.cpp  SpearfishArgumentParser.hpp  args.cpp  args.hpp  convert.h  convert.hpp  exec_cmd.cpp  exec_cmd.hpp  newick.cpp  newick.hpp  parse_cli.h  parse_file.h
src/cpp/misc/: common_types.h  matrix.hpp  structures.h
src/py/: main.py  wrapper.py
src/py/scripts/: launch_fastme.py  launch_generax.py  launch_spearfish.py  paths.py  sequence_model.py  utils.py
src/py/tools/data/: fam.py  metrics.py
src/py/tools/msa/: dist_matrix_converter.py  msa_converter.py  read_msa.py
test/cpp/: main.cpp
test/cpp/misc/: matrix_test.cpp  matrix_test.hpp
